--- a/index.html
+++ b/index.html
@@ -7,14 +7,21 @@
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script src="https://kit.fontawesome.com/b6e71eb567.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <section id="container">
         <header>
-            <img src="img/BEA.png" alt="logo" id="logo">
+            <span id="name-container">
+                <img src="img/BEA.jpg" alt="logo" id="logo">
+                <span id="name">BARE EAGLER ATTORNEYS</span>
+            </span>
             <span class="material-symbols-outlined" id="menu">menu</span>
             <nav id="nav">
                 <span id="close">X</span>
@@ -26,16 +33,14 @@
             </nav>
         </header>
         <section class="landing_section" id="#">
-            <div id="overlay">
+            <div class="overlay">
                 <h1>ATTORNEYS-AT-LAW</h1>
-                <h5>A 100% black female owned boutique law firm</h5>
             </div>
-            <img src="img/buildings.jpg" class="justice_image" alt="justice_image">
         </section>
         <section class="services" id="services">
             <div class="title">
-                <h2>Our <br><span class="color">Services</span></h2>
-                <img src="img/BEA.jpg" class="bea-image" alt="bea-image">
+                <h2><span class="color">OUR</span><br>SERVICES</h2>
+                <img src="img/logo.jpg" class="bea-image" alt="bea-image">
             </div>
             <div class="services_body">
                 <dl>
@@ -74,8 +79,8 @@
                         <dd>Expertise in overseeing contracts throughout their lifecycle, ensuring legal compliance and effective execution.</dd>
                     </p>
                 </dl>
+                <button class="read-more" id="more-services">READ MORE &#8594</button><br>
             </div>
-            <button class="read-more" id="more-services">READ MORE &#8594</button><br>
             <h1 id="specialisation_title">SPECIALISATION & FOCUS</h1>
             <div id="specialisation">
                 <div class="services_body">
@@ -190,83 +195,74 @@
                 </div>
             </div>
         </section>
+        <div class="breaker">
+            <p id="quote">
+                <q>A lawyer is a person who writes a 10000-word document and calls it a brief</q><br><br>
+                <span>~ Franz Kafka</span>
+            </p>
+            <img src="img/Justice.jpg" class="justice_image" alt="justice-hammer-image">
+        </div>
         <section class="about" id="about">
-            <div class="breaker">
-                <p id="quote">
-                    <q>A lawyer is a person who writes a 10000-word document and calls it a brief</q><br><br>
-                    <span>~ Franz Kafka</span>
-                </p>
-                <img src="img/Justice2.jpg" class="justice_image" alt="justice-hammer-image">
-            </div>
-            <div class="title" id="about_title">
-                <h2>About <br><span class="color">Us</span></h2>
-                <img src="img/BEA.jpg" class="bea-image" alt="justice-hammer-image">
-            </div>
             <section class="about_body">
+                <h1>ABOUT US</h1>
                 <div class="about_body-content">
-                    <h1>Who we are</h1>
+                    <h2>Who we are</h2>
                     <p>
                         Bare Eagler Attorneys (BEA) is a 100% black female owned boutique law firm headquartered in Johannesburg, South Africa. The firm is led by Eagler Bare, a duly experienced and admitted attorney of the High Court of South Africa who is supported by seasoned legal consultants with over a decade of experience for in-depth insights and effective solutions.</p>
-                    <h1>Our values</h1>
+                    <h2>Our values</h2>
                     <p>Client-Centricity, Integrity, Collaboration and Excellence.</p>
-                    <h1>Our mission</h1>
+                    <h2>Our mission</h2>
                     <p>BEA is centered around its clients and guided by its unwavering integrity to provide unparalleled legal services through timely, effective, and ethical legal solutions. At the heart of BEA's legal practice is an unwavering commitment to excellence. Each case is approached with meticulous attention to detail, strategic thinking, and a passion for achieving optimal outcomes for clients.</p>
                 </div>      
             </section>
-            <section class="people" id="people">
-                <div class="title">
-                    <h2>Our <br><span class="color">People</span></h2>
-                    <img src="img/BEA.jpg" class="bea-image" alt="justice-hammer-image">
-                </div>
-                <div class="people_content">
-                    <figure>
-                        <h1>Founder & Principal Attorney</h1>
-                        <img src="img/Eagler.jpg" id="eagler" alt="Eagler-image">
-                        <figcaption>Eagler Bare</figcaption>
-                    </figure>
-                    <section class="people_body">
-                        <p>
-                            Eagler Bare, is an accomplished attorney with a commitment to excellence and an unwavering passion for the intricacies of the law.<br><br>
-                            She graduated in 2016 with a Bachelor of Laws (LLB) from the University of South Africa. She was then admitted as an attorney of the High Court of South Africa in 2017, marking the inception of a legal journey characterised by diligence, expertise, and a resolute commitment to the principles of justice.<br><br>
-                            Her pursuit of legal mastery led her to the University of Johannesburg, where she attained a Master of Laws degree (LLM) in Drafting and Interpretation of Contracts in 2021, cementing her dedication to continuous intellectual growth. Additionally, she holds a certificate in Compliance Management from the esteemed University of Cape Town.
-                        </p>
-                        <p id="more_eagler">
-                            Her post-admission years have been marked by invaluable experiences that have sharpened her skills and deepened her understanding of the legal landscape.  Her legal acumen has been honed through years of specialising in the intricate fields of commercial law, employment law and construction & engineering law.<br><br>
-                            In the dynamic realm of commercial law, she has navigated complex transactions and provided strategic counsel to businesses. In employment law, she has assisted in reviewing and drafting employment contracts and representing clients in cases of unjust dismissal, wrongful termination, and employment-related disputes.  The domain of construction & engineering law has seen her adept negotiation skills, ensuring the seamless execution of contracts and regulatory compliance.<br><br>
-                            In embracing the ethos of lifelong learning, she stays at the forefront of legal developments, ensuring that her clients benefit from the latest insights, strategies, and innovative legal solutions.  As the Founder and Principal Attorney of Bare Eagler Attorneys, she is dedicated to providing unparalleled legal services, guided by principles of integrity, excellence, and client-centricity.
-                        </p>
-                        <button class="read-more" id="people_read-more">READ MORE &#8594</button><br>
-                    </section>
-                </div>
-                <section class="contact" id="contact">
-                    <div class="title">
-                        <h2>Contact <br><span class="color">Us</span></h2>
-                        <img src="img/BEA.jpg" class="bea-image" alt="justice-hammer-image">
-                    </div>
-                    <div class="contact_container">
-                        <div id="contact-logo-container">
-                            <div class="cover"></div>
-                            <img src="img/law.jpg" alt="logo" id="contact-logo">
-                        </div>
-                        <div class="wrapper">
-                            <section class="contact_body">
-                                <h1 style="font-size: 1em;">Reach us on</h1>
-                                <div class="contact_icons">
-                                    <p><i class="fa-solid fa-phone"></i><span class="space">+27 83 208 1665</span></p>
-                                    <p><i class="fa-solid fa-envelope"></i><span class="space">info@ebattorneys.co.za </span></p>
-                                    <p><i class="fa-solid fa-envelope"></i><span class="space">eagler@ebattorneys.co.za</span></p>
-                                </div>    
-                            </section>
-                            <section class="socials">
-                                <i class="fa-brands fa-facebook"></i>
-                                <i class="fa-brands fa-linkedin"></i>
-                                <i class="fa-brands fa-x-twitter"></i>
-                                <i class="fa-brands fa-instagram"></i>
-                            </section><br><br>
-                        </div>   
-                    </div>
-                </section>
+        </section>
+        <section class="people" id="people">
+            <section class="people_body">
+                <h1>OUR KEY PEOPLE</h1>
+                <p>
+                    Eagler Bare, is an accomplished attorney with a commitment to excellence and an unwavering passion for the intricacies of the law.<br><br>
+                    She graduated in 2016 with a Bachelor of Laws (LLB) from the University of South Africa. She was then admitted as an attorney of the High Court of South Africa in 2017, marking the inception of a legal journey characterised by diligence, expertise, and a resolute commitment to the principles of justice.<br><br>
+                    Her pursuit of legal mastery led her to the University of Johannesburg, where she attained a Master of Laws degree (LLM) in Drafting and Interpretation of Contracts in 2021, cementing her dedication to continuous intellectual growth. Additionally, she holds a certificate in Compliance Management from the esteemed University of Cape Town.
+                </p>
+                <p id="more_eagler">
+                    Her post-admission years have been marked by invaluable experiences that have sharpened her skills and deepened her understanding of the legal landscape.  Her legal acumen has been honed through years of specialising in the intricate fields of commercial law, employment law and construction & engineering law.<br><br>
+                    In the dynamic realm of commercial law, she has navigated complex transactions and provided strategic counsel to businesses. In employment law, she has assisted in reviewing and drafting employment contracts and representing clients in cases of unjust dismissal, wrongful termination, and employment-related disputes.  The domain of construction & engineering law has seen her adept negotiation skills, ensuring the seamless execution of contracts and regulatory compliance.<br><br>
+                    In embracing the ethos of lifelong learning, she stays at the forefront of legal developments, ensuring that her clients benefit from the latest insights, strategies, and innovative legal solutions.  As the Founder and Principal Attorney of Bare Eagler Attorneys, she is dedicated to providing unparalleled legal services, guided by principles of integrity, excellence, and client-centricity.
+                </p>
+                <button class="read-more" id="people_read-more">READ MORE &#8594</button><br>
             </section>
+            <figure>
+                <div>
+                    <img src="img/Eagler.jpg" id="eagler" alt="Eagler-image">
+                    <figcaption>EAGLER BARE</figcaption>
+                    <p>FOUNDER & PRINCIPAL ATTORNEY</p>
+                </div>     
+            </figure>
+        </section> 
+        <section class="contact" id="contact">
+            <section class="contact_body">
+                <h1>CONTACT US TODAY</h1>
+                <div class="contact_icons">
+                    <span><strong>REACH OUT</strong> FOR TAILORED LEGAL ASSISTANCE</span>
+                    <p><i class="fa-solid fa-phone"></i><span class="space">+27 83 208 1665</span></p>
+                    <p><i class="fa-solid fa-envelope"></i><span class="space">eagler@bareattorneys.co.za</span></p>
+                </div> 
+                <img src="img/logo.jpg" id="contact-logo"> 
+            </section>
+            <form>
+                <p><strong>OR GET IN TOUCH</strong> VIA THE FORM</p>
+                <div>
+                    <input type="text" name="first-name" id="name" placeholder="First Name">
+                    <input type="text" name="last-name" id="name" placeholder="Last Name">
+                    <input type="text" name="contact" id="contact" placeholder="Contact Name">
+                    <input type="email" name="email" id="email" placeholder="Email Address">
+                    <input type="text" name="subject" id="subject" placeholder="Subject">
+                </div>
+                <div>
+                    <textarea name="message" id="message" cols="30" rows="10" resize="none"></textarea>
+                </div>
+                <input type="submit" value="SUBMIT">
+            </form><br>
         </section>
         <footer>Copyright @ 2024. All rights reserved.</footer>
     </section>
